<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.noa.myapplication.MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dni" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextDni" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre_apellido" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextNombreApellido" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre_colegio" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextNombreColegio" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numero_mesa" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextNumeroMesa" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alta"
            android:textAllCaps="false"
            android:id="@+id/btnAlta"
            android:layout_weight="0.25"
            android:onClick="alta"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/baja"
            android:textAllCaps="false"
            android:id="@+id/btnBaja"
            android:layout_weight="0.25"
            android:onClick="baja"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cons"
            android:textAllCaps="false"
            android:id="@+id/btnCons"
            android:layout_weight="0.25"
            android:onClick="consulta"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modif"
            android:textAllCaps="false"
            android:id="@+id/btnModif"
            android:layout_weight="0.25"
            android:onClick="modificacion"/>
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inici"
            android:textAllCaps="false"
            android:id="@+id/btnInici"
            android:layout_weight="0.25"
            android:onClick="inicio"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ant"
            android:textAllCaps="false"
            android:id="@+id/btnAnt"
            android:layout_weight="0.25"
            android:onClick="anterior"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sig"
            android:textAllCaps="false"
            android:id="@+id/btnSig"
            android:layout_weight="0.25"
            android:onClick="siguiente"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fin"
            android:textAllCaps="false"
            android:id="@+id/btnFin"
            android:layout_weight="0.25"
            android:onClick="fin"/>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_infor"
            android:textAllCaps="false"
            android:id="@+id/btnIResetInfo"
            android:onClick="onReset"/>
    </LinearLayout>



</LinearLayout>
